--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,11 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "darryldecode/cart": "~4.0",
         "fideloper/proxy": "^4.0",
-        "gloudemans/shoppingcart": "^2.6",
         "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "uxweb/sweet-alert": "^2.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
